Bug#24907: unpredictable (display) precission, if input precission increases

post-merge fixes: some things work differently in 5.1